--- a/conda.yaml
+++ b/conda.yaml
@@ -10,8 +10,8 @@ dependencies:
   - robocorp-truststore=0.8.0     # https://pypi.org/project/robocorp-truststore/
   - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
   - pip:
-    - rpaframework==28.5.1        # https://rpaframework.org/releasenotes.html
-    - robocorp==2.0.1             # https://pypi.org/project/robocorp
+    - rpaframework==28.6.2        # https://rpaframework.org/releasenotes.html
+    - robocorp==2.1.0             # https://pypi.org/project/robocorp
     - robocorp-browser==2.3.3     # https://pypi.org/project/robocorp-browser
-    - requests==2.31.0            # https://pypi.org/project/requests
-
+    - requests==2.32.3            # https://pypi.org/project/requests
+    - openpyxl==3.2.0b1           # https://pypi.org/project/openpyxl/
