--- a/conda.yaml
+++ b/conda.yaml
@@ -7,11 +7,11 @@ channels:
 
 dependencies:
   - python=3.10.12                # https://pyreadiness.org/3.10
-  - robocorp-truststore=0.8.0     # https://pypi.org/project/robocorp-truststore/
   - pip=23.2.1                    # https://pip.pypa.io/en/stable/news
   - pip:
     - rpaframework==28.6.2        # https://rpaframework.org/releasenotes.html
-    - robocorp==2.1.0             # https://pypi.org/project/robocorp
-    - robocorp-browser==2.3.3     # https://pypi.org/project/robocorp-browser
     - requests==2.32.3            # https://pypi.org/project/requests
     - openpyxl==3.2.0b1           # https://pypi.org/project/openpyxl/
+    - pandas==2.2.2               # https://pypi.org/project/pandas/
+    - pyyaml==6.0.2               # https://pypi.org/project/PyYAML/
+    - pytz
